# .github

./: .gitignore  AXIOMS.md  LICENSE  README.md  ade-verify.yml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  chore.md  feature_request.md
.github/profile/: README.md
.github/profile-internal/: README.md
.github/workflows/: ade-verify.yml  ci-python-library.yml  ci-python-service.yml  constitution-review.yml  model-benchmark.yml  pr-doc-bot.yml  security-audit.yml  start-dev-cycle.yml  verify.yml
.specify/: init-options.json  integration.json
.specify/integrations/: gemini.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
docs/: AXIOMS.md  CONSTITUTION.md  MANIFESTO.md  METHODOLOGY.md  POSTULATES.md  README.md
features/: repository_structure.feature  script_quality.feature
profile/: README.md
scripts/: audit_security.ps1  audit_security.sh  evaluate_models.py  review_constitution.ps1  review_constitution.sh  review_pr_doc.ps1  review_pr_doc.sh  run_bdd_tests.ps1  run_bdd_tests.sh  start_next_dev_cycle.ps1  start_next_dev_cycle.sh  test_scenarios.json  validate_axioms.ps1  validate_axioms.sh
specs/001-ade-compliance/: spec.md  (+2 more)
templates/service/: Dockerfile  README.md  pyproject.toml
templates/service/.specify/memory/: constitution.md
templates/service/src/: main.py
tests/: axioms_test.sh  bdd_runner_test.sh  test_bdd_runner.sh  test_validate_axioms.sh  test_workflows.sh  validate_axioms_test.sh  workflows_test.sh
(+29 files in other folders)
